--- a/start_notebook.ipynb
+++ b/start_notebook.ipynb
@@ -1,21 +1,78 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 4,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "?run"
+    "# start with setup"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run -t pyage.core.bootstrap pyage.conf.test_conf"
+    "%run -m pyage.core.bootstrap pyage.conf.test_conf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[0m\u001b[01;34mdocu\u001b[0m/   pyage-20180315_020035.log  setup.py\r\n",
+      "\u001b[01;34mpyage\u001b[0m/  README.md                  start_notebook.ipynb\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "%ls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ERROR:root:File `u'pyage.core.bootstrap.py'` not found.\r\n",
+      "ERROR:root:File `u'pyage.core.bootstrap.py'` not found.\r\n",
+      "ERROR:root:File `u'pyage.core.bootstrap.py'` not found.\r\n",
+      "ERROR:root:File `u'pyage.core.bootstrap.py'` not found.\r\n",
+      "INFO:pyage.core.workplace:=========STEP 1=============\r\n",
+      "INFO:pyage.core.workplace:=========STEP 2=============\r\n",
+      "INFO:pyage.core.workplace:=========STEP 3=============\r\n",
+      "INFO:pyage.core.workplace:=========STEP 4=============\r\n",
+      "INFO:pyage.core.workplace:=========STEP 5=============\r\n",
+      "INFO:pyage.core.workplace:=========STEP 6=============\r\n",
+      "INFO:pyage.core.workplace:=========STEP 7=============\r\n",
+      "INFO:pyage.core.workplace:=========STEP 8=============\r\n",
+      "INFO:pyage.core.workplace:=========STEP 9=============\r\n",
+      "INFO:pyage.core.workplace:=========STEP 10=============\r\n",
+      "ERROR:root:File `u'ls.py'` not found.\r\n",
+      "INFO:pyage.core.workplace:=========STEP 1=============\r\n",
+      "INFO:pyage.core.workplace:=========STEP 2=============\r\n",
+      "INFO:pyage.core.workplace:=========STEP 3=============\r\n",
+      "INFO:pyage.core.workplace:=========STEP 4=============\r\n",
+      "INFO:pyage.core.workplace:=========STEP 5=============\r\n",
+      "INFO:pyage.core.workplace:=========STEP 6=============\r\n",
+      "INFO:pyage.core.workplace:=========STEP 7=============\r\n",
+      "INFO:pyage.core.workplace:=========STEP 8=============\r\n",
+      "INFO:pyage.core.workplace:=========STEP 9=============\r\n",
+      "INFO:pyage.core.workplace:=========STEP 10=============\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "%cat pyage-20180315_020035.log"
    ]
   },
   {
