satcnf conf almost finished but not working properly yet

--- a/pyage/satcnf/help_notebook.ipynb
+++ b/pyage/satcnf/help_notebook.ipynb
@@ -565,6 +565,26 @@
    "source": [
     "# looks ok"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 849,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50"
+      ]
+     },
+     "execution_count": 849,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cnf_data.max()"
+   ]
   }
  ],
  "metadata": {
